@@ -143,8 +143,8 @@ void init_freq_table_pureint(void)
 		17.0 / 12,  3.0 /  2, 8.0 / 5, 5.0 / 3, 9.0 / 5, 15.0 / 8
 	};
 	static double minor_ratio[] = {
-		 1.0 /  1, 16.0 / 15, 10.0 /  9, 6.0 / 5, 5.0 / 4,  4.0 / 3,
-		17.0 / 12,  3.0 /  2, 25.0 / 16, 5.0 / 3, 9.0 / 5, 15.0 / 8
+		 1.0 /  1, 25.0 / 24, 10.0 /  9, 6.0 / 5, 5.0 / 4,  4.0 / 3,
+		25.0 / 18,  3.0 /  2, 25.0 / 16, 5.0 / 3, 9.0 / 5, 15.0 / 8
 	};
 	
 	for (i = 0; i < 12; i++)
